	update: add HP and Juniper dictionary entries.  closes tickets 145 and 165 (by Aaron)
	update: combined two forms on object properties page into one.  closes tickets 36 and 87 (by Aaron)
	bugfix: show error message if snmp module isn't loaded.  closes ticket 43 (by Aaron)
	bugfix: show error message for duplicate IPv4 network record
	update: enable username handling in Cisco switch connector
0.16.4 2008-11-04
	bugfix: display VS/RS config block in RS pool view
	bugfix: resolve tabindex issues in many forms
	bugfix: NAT rules were not displayed for IP address
	bugfix: less PHP warnings
	update: enable user search by real name
	update: allow empty names for IPv4 networks
	update: refactor snmp.php to support Cisco 3032, 3750, 4506 switches
		(by Aaron, w/data & testing from Luis Fernando Lacayo and Ray Robertson)
	update: add SNMP discovery support for Cisco 2950-24 (patch by Russ, ticket 177)
0.16.3 2008-10-02
	new feature: tell line number for lexical and syntax errors
	new feature: CodePress editor enables line numbers and syntax
		highlightling for RackCode editing
	new feature: one more input format for RS manager
	new feature: standalone RackCode report with warnings
	new feature: unified IPv4 address tree
	bugfix: tags are now properly displayed for users
	bugfix: the JavaScript error isn't generated any more (fix by Aaron)
	bugfix: tag tree is now always correctly sorted
	bugfix: fix a typo in NAT rules displaying code (pointed out by Piotr Nowacki)
	bugfix: error message was broken in the installer (reported by Thomas Thep)
	bugfix: IPv4 network check sometimes failed to detect duplicate networks
	bugfix: lexical scanner could mistakenly fail in some rare cases
	bugfix: drop DB index mistakenly introduced in 0.16.1
0.16.2 2008-08-21
	bugfix: IP address picker was broken
	bugfix: more message processing fixes
	bugfix: work around some NET-SNMP builds (reported by Walery Wysotsky)
	bugfix: some characters in password could break user access